option('ansi',              type: 'boolean', value: false)
option('enable-mmx',        type: 'boolean', value: true)
option('enable-mp',         type: 'boolean', value: true)
option('enable-sse',        type: 'boolean', value: true)
option('enable-default-bin',type: 'boolean', value: true)
option('enable-console-bin',type: 'boolean', value: true)
option('gimpdir',           type: 'string',  value: '')
option('profiling',         type: 'boolean', value: true)
option('with-aa',           type: 'boolean', value: true)
option('with-alsa',         type: 'boolean', value: true)
option('with-appdata-test', type: 'boolean', value: true)
option('with-cairo-pdf',    type: 'boolean', value: true)
option('with-directx-sdk',  type: 'string',  value: '')
option('with-gs',           type: 'boolean', value: true)
option('with-gtk-doc',      type: 'boolean', value: true)
option('with-gudev',        type: 'boolean', value: true)
option('with-jasper',       type: 'boolean', value: true)
option('with-linux-input',  type: 'boolean', value: true)
option('with-mng',          type: 'boolean', value: true)
option('with-openexr',      type: 'boolean', value: true)
option('with-poppler',      type: 'boolean', value: true)
option('with-print',        type: 'boolean', value: true)
option('with-python',       type: 'boolean', value: true)
option('with-script-fu',    type: 'boolean', value: true)
option('with-vec-icons',    type: 'boolean', value: true)
option('with-webkit',       type: 'boolean', value: true)
option('with-webp',         type: 'boolean', value: true)
option('with-wmf',          type: 'boolean', value: true)
option('with-xmc',          type: 'boolean', value: true)
option('with-xpm',          type: 'boolean', value: true)
option('with-xvfb-run',     type: 'boolean', value: true)
